# Argus

./: .gitignore  CMakeLists.txt  README.md  license.txt
src/: argus.c  argus.h  axis.c  axis.h  button.c  button.h  console.c  csv.c  csv.h  curve.c  curve.h  curves.c  curves.h  enums.h  font.h  glyphs.c  glyphs.h  graph.c  graph.h  grid.c  grid.h  icons.c  icons.h  main.c  parser.c  parser.h  point.c  point.h  rect.h  render.c  render.h  ring_buffer.c  ring_buffer.h  screenshot.c  screenshot.h  shader.c  shader.h  string.c  string.h  structs.h  (+8 more)
